[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/маг2.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://ui/exp_bar.png" type="Texture" id=3]
[ext_resource path="res://ui/exp_bar_2.png" type="Texture" id=4]
[ext_resource path="res://ui/xp_bar.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 10.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90.5, 46 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 1.5708
current = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -2.98023e-07 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="player_area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_area"]
position = Vector2( 1.5, -2.98023e-07 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="player_attack_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_attack_area"]
visible = false
shape = SubResource( 2 )

[node name="HpProgress" type="TextureProgress" parent="."]
margin_left = -150.0
margin_top = -80.0
margin_right = -105.0
margin_bottom = -73.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="ExpProgress" type="TextureProgress" parent="."]
margin_left = -150.0
margin_top = -70.0
margin_right = -105.0
margin_bottom = -63.0
max_value = 10.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[connection signal="area_entered" from="player_area" to="." method="_on_player_area_area_entered"]
